// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workspaces dependsOn > should resolve and run dependency tasks first 1 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/pnpm-workspaces
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer frontend:build
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/pnpm-workspaces/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>frontend:check</BoldDim> <Yellow>STARTED</Yellow>

Check frontend successfully!
[log]
<Green>✓</Green> Task <Bold>frontend:check</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>shared:api:check</BoldDim> <Yellow>STARTED</Yellow>

Check API successfully!
[log]
<Green>✓</Green> Task <Bold>shared:api:check</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>frontend:build</BoldDim> <Yellow>STARTED</Yellow>

Build frontend successfully!
[log]
<Green>✓</Green> Task <Bold>frontend:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>3</BoldDim> tasks executed
`;

exports[`workspaces dependsOn > should resolve and run dependency tasks first 2 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/pnpm-workspaces
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer shared:api:build
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/pnpm-workspaces/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>shared:api:check</BoldDim> <Yellow>STARTED</Yellow>

Check API successfully!
[log]
<Green>✓</Green> Task <Bold>shared:api:check</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>shared:api:build</BoldDim> <Yellow>STARTED</Yellow>

Build API successfully!
[log]
<Green>✓</Green> Task <Bold>shared:api:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>2</BoldDim> tasks executed
`;
